--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "github.com/jcorbin/jspit",
   "author": "Joshua T Corbin <jcorbin@wunjo.org>",
   "license": "UNLICENSED",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
