--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "parcel build index.html"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.0.3"
   }
 }
