--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6", "es7", "es2017", "es2018", "es2019", "DOM"],
+    "target": "es6",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
