--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url /jspit/",
-    "dist": "desc=$(git describe --always) && cd dist && git add -A && git commit -m \"build $desc\""
+    "dist": "rm -fv dist/*; npm run build && desc=$(git describe --always) && cd dist && git add -A && git commit -m \"build $desc\""
   },
   "devDependencies": {
     "core-js": "^3.6.5",
