--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "core-js": "^3.6.5",
+    "lit-html": "^1.3.0",
     "parcel-bundler": "^1.12.4",
     "regenerator-runtime": "^0.13.7",
     "typescript": "^4.0.3"
