--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {
+    "lit-html": "^1.3.0"
+  },
   "devDependencies": {
     "typescript": "^4.0.3"
   }
