--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lit-html": "^1.3.0"
   },
   "devDependencies": {
+    "@snowpack/plugin-optimize": "^0.2.4",
     "@snowpack/plugin-typescript": "^1.0.1",
     "@types/snowpack-env": "^2.3.0",
     "snowpack": "^2.14.0",
