--- a/packages/jspit/package.json
+++ b/packages/jspit/package.json
@@ -8,6 +8,6 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "dist": "rm -fv build/*; npm run build && desc=$(git describe --always) && cd build && git add -A && git commit -m \"build $desc\""
+    "dist": "bash ./scripts/dist.sh"
   }
 }
