Turn on snowpack build cleaning

--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -2,6 +2,9 @@
   "plugins": [
     "@snowpack/plugin-typescript"
   ],
+  "buildOptions": {
+    "clean": true
+  },
   "installOptions": {
     "installTypes": true
   }
