--- a/packages/jspit/package.json
+++ b/packages/jspit/package.json
@@ -9,5 +9,8 @@
     "start": "snowpack dev",
     "build": "snowpack build",
     "dist": "bash ./scripts/dist.sh && bash ./scripts/dist-prune.sh"
+  },
+  "dependencies": {
+    "lit-html": "^1.3.0"
   }
 }
