--- a/packages/jspit/package.json
+++ b/packages/jspit/package.json
@@ -7,8 +7,7 @@
   "private": true,
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
-    "dist": "bash ./scripts/dist.sh && bash ./scripts/dist-prune.sh"
+    "build": "snowpack build"
   },
   "dependencies": {}
 }
