[jspit/tiles] add resize-observed size updates

--- a/packages/jspit/package.json
+++ b/packages/jspit/package.json
@@ -9,5 +9,8 @@
     "start": "snowpack dev",
     "build": "snowpack build"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/resize-observer-browser": "^0.1.4"
+  }
 }
