--- a/packages/jspit/tsconfig.json
+++ b/packages/jspit/tsconfig.json
@@ -1,26 +1,6 @@
 {
+  "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
-    "jsx": "preserve",
-    "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "error",
-    "isolatedModules": true,
-    "noEmit": true,
-
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true ,
-    "resolveJsonModule": true,
-    "useDefineForClassFields": true,
-
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true,
-
     "baseUrl": "./",
     "paths": { "*": ["web_modules/.types/*"] }
   }
