[jspit] add repository definition to package.json

--- a/packages/jspit/package.json
+++ b/packages/jspit/package.json
@@ -4,6 +4,11 @@
   "description": "JS Pit",
   "author": "Joshua T Corbin <jcorbin@wunjo.org>",
   "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/borkshop/js.git",
+    "directory": "packages/jspit"
+  },
   "private": true,
   "scripts": {
     "start": "snowpack dev",
