--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
+  "name": "borkshop",
+  "version": "0.1.0",
+  "description": "Borkshop monorepo",
+  "license": "BSD-3-Clause",
+
+  "type": "module",
   "private": true,
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/borkshop/js.git"
+  },
+
   "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@snowpack/plugin-optimize": "^0.2.4",
-    "@snowpack/plugin-typescript": "^1.0.1",
-    "@types/snowpack-env": "^2.3.0",
-    "snowpack": "^2.14.0",
-    "typescript": "^4.0.3"
-  }
+    "cdom-template",
+    "jspit"
+  ]
 }
