--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 
     "esModuleInterop": true,
 
-    "moduleResolution": "node",
+    "moduleResolution": "classic",
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
@@ -16,9 +16,7 @@
     "noEmit": true,
 
     "strict": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true ,
-    "resolveJsonModule": true,
     "useDefineForClassFields": true,
 
     "noUnusedLocals": true,
