[jspit] make snowpack exclude its own build directory

--- a/jspit/package.json
+++ b/jspit/package.json
@@ -36,6 +36,7 @@
       "@snowpack/plugin-typescript"
     ],
     "exclude": [
+      "**/build/**/*",
       "**/node_modules/**/*",
       "**/__tests__/*",
       "**/*.@(spec|test).@(js|mjs)",
