--- a/forest/package.json
+++ b/forest/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "demo",
+  "name": "forest",
   "version": "0.1.0",
-  "description": "Cascading DOMgeon Template",
-  "author": "Joshua T Corbin <jcorbin@wunjo.org>",
+  "description": "A dark forest DOMgeon",
+  "author": "Kris Kowal <kris@cixar.com>",
   "license": "BSD-3-Clause",
   "main": "index.html",
   "type": "module",
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/borkshop/js.git",
-    "directory": "cdom-template"
+    "directory": "forest"
   },
 
   "private": true,
@@ -18,12 +18,17 @@
     "lint": "tsc",
     "test": "npm run lint",
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "snowpack build --clean"
   },
 
   "dependencies": {},
   "devDependencies": {
-    "@types/resize-observer-browser": "^0.1.4"
+    "@snowpack/plugin-optimize": "^0.2.4",
+    "@snowpack/plugin-typescript": "^1.0.1",
+    "@types/resize-observer-browser": "^0.1.4",
+    "@types/snowpack-env": "^2.3.0",
+    "snowpack": "^2.14.0",
+    "typescript": "^4.0.3"
   },
 
   "snowpack": {
@@ -31,6 +36,7 @@
       "@snowpack/plugin-typescript"
     ],
     "exclude": [
+      "**/build/**/*",
       "**/node_modules/**/*",
       "**/__tests__/*",
       "**/*.@(spec|test).@(js|mjs)",
