--- a/cdom-template/package.json
+++ b/cdom-template/package.json
@@ -18,12 +18,17 @@
     "lint": "tsc",
     "test": "npm run lint",
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "snowpack build --clean"
   },
-
   "dependencies": {},
+
   "devDependencies": {
-    "@types/resize-observer-browser": "^0.1.4"
+    "@snowpack/plugin-optimize": "^0.2.4",
+    "@snowpack/plugin-typescript": "^1.0.1",
+    "@types/resize-observer-browser": "^0.1.4",
+    "@types/snowpack-env": "^2.3.0",
+    "snowpack": "^2.14.0",
+    "typescript": "^4.0.3"
   },
 
   "snowpack": {
@@ -31,6 +36,7 @@
       "@snowpack/plugin-typescript"
     ],
     "exclude": [
+      "**/build/**/*",
       "**/node_modules/**/*",
       "**/__tests__/*",
       "**/*.@(spec|test).@(js|mjs)",
