[jspit] add cdom-template snowpack mount

--- a/jspit/package.json
+++ b/jspit/package.json
@@ -47,10 +47,12 @@
     ],
     "mount": {
       "../cdom": "/cdom",
+      "../cdom-template": "/cdom-template",
       ".": "/"
     },
     "alias": {
-      "cdom": "/cdom"
+      "cdom": "/cdom",
+      "cdom-template": "/cdom-template"
     }
   }
 }
