package.json: sort workspaces

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 
   "workspaces": [
     "cdom-template",
-    "jspit",
+    "cube",
     "forest",
-    "mine",
-    "cube"
+    "jspit",
+    "mine"
   ]
 }
