Pivot module script protocol
- test is a low level entry to any test runner
- ci is now the module integration that runs lint, test, and whatever
  else

--- a/cdom-template/package.json
+++ b/cdom-template/package.json
@@ -16,7 +16,8 @@
   "private": true,
   "scripts": {
     "lint": "tsc",
-    "test": "npm run lint",
+    "test": "true",
+    "ci": "npm run lint && npm run test",
     "start": "snowpack dev",
     "build": "snowpack build --clean"
   },
