--- a/scan/package.json
+++ b/scan/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "lint": "tsc",
     "test": "ava",
-    "cover": "nyc npm test"
+    "cover": "nyc npm test",
+    "ci": "npm run lint && npm run test"
   },
   "ava": {
     "require": [
