--- a/scan/package.json
+++ b/scan/package.json
@@ -16,6 +16,7 @@
     "lint": "tsc",
     "test": "ava",
     "cover": "nyc npm test",
+    "view-cover": "nyc report -r html && open coverage/index.html",
     "ci": "npm run lint && npm run test"
   },
   "ava": {
@@ -27,6 +28,7 @@
     "ava": "^3.15.0",
     "esm": "^3.2.25",
     "nyc": "^15.1.0",
+    "open": "^8.0.2",
     "typescript": "^4.0.3"
   }
 }
