scan: exclude coverage from tsconfig

--- a/scan/tsconfig.json
+++ b/scan/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "node"
-  }
+  },
+  "exclude": [
+    "coverage"
+  ]
 }
