--- a/entmind/package.json
+++ b/entmind/package.json
@@ -31,6 +31,12 @@
       "esm"
     ]
   },
+  "nyc": {
+    "lines": 100,
+    "functions": 100,
+    "statements": 100,
+    "branches": 100
+  },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
