--- a/entmind/tsconfig.json
+++ b/entmind/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "target": "es2021",
     "moduleResolution": "node"
   },
   "exclude": [
