--- a/boopworld/package.json
+++ b/boopworld/package.json
@@ -5,6 +5,7 @@
   "author": "Joshua T Corbin <jcorbin@wunjo.org>",
   "license": "BSD-3-Clause",
   "main": "index.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/borkshop/js.git",
@@ -14,38 +15,20 @@
   "scripts": {
     "lint": "tsc",
     "test": "ava",
-    "cover": "nyc npm test",
-    "view-cover": "nyc report -r html && open coverage/index.html",
-    "ci": "npm run lint && npm run cover && nyc check-coverage"
+    "cover": "c8 npm test",
+    "view-cover": "c8 report -r html && open coverage/index.html",
+    "ci": "npm run lint && npm run cover && c8 check-coverage"
   },
-  "ava": {
-    "babel": {
-      "testOptions": {
-        "plugins": [
-          "@babel/plugin-syntax-class-properties"
-        ]
-      }
-    },
-    "require": [
-      "@babel/register",
-      "esm"
-    ]
-  },
-  "nyc": {
+  "c8": {
     "lines": 80,
     "functions": 69,
     "statements": 76,
     "branches": 65
   },
   "devDependencies": {
-    "@ava/babel": "^1.0.1",
-    "@babel/plugin-syntax-class-properties": "^7.12.13",
-    "@babel/register": "^7.13.8",
-    "ava": "^3.15.0",
-    "esm": "^3.2.25",
-    "nyc": "^15.1.0",
+    "ava": "^4.0.0-rc.1",
+    "c8": "^7.10.0",
     "open": "^8.0.2",
     "typescript": "^4.0.3"
   }
 }
-
