[xorbig] directly implement stringable iterators

--- a/xorbig/tsconfig.json
+++ b/xorbig/tsconfig.json
@@ -6,8 +6,7 @@
     "allowJs": true,
     "checkJs": true,
 
-    "declaration": true,
-    "emitDeclarationOnly": true,
+    "noEmit": true,
 
     "esModuleInterop": true,
 
