--- a/xorbig/package.json
+++ b/xorbig/package.json
@@ -17,6 +17,7 @@
     "test": "ava",
     "cover": "c8 npm test",
     "view-cover": "c8 report -r html && open coverage/index.html",
+    "prodts": "tsc --project tsconfig.production.json",
     "ci": "npm run lint && npm run cover && c8 check-coverage"
   },
   "c8": {
