--- a/boopworld/package.json
+++ b/boopworld/package.json
@@ -18,7 +18,9 @@
     "cover": "c8 npm test",
     "view-cover": "c8 report -r html && open coverage/index.html",
     "ci": "npm run lint && npm run cover && c8 check-coverage",
-    "prodts": "rm -fv *.d.ts && tsc --project tsconfig.production.json"
+    "prodts": "rm -fv *.d.ts && tsc --project tsconfig.production.json",
+    "start": "snowpack dev",
+    "build": "snowpack build --clean"
   },
   "c8": {
     "lines": 80,
@@ -34,6 +36,22 @@
     "ava": "^4.0.0-rc.1",
     "c8": "^7.10.0",
     "open": "^8.0.2",
+    "snowpack": "^3.8.8",
     "typescript": "^4.0.3"
+  },
+  "snowpack": {
+    "workspaceRoot": "../",
+    "exclude": [
+      "**/build/**/*",
+      "**/node_modules/**/*",
+      "./test.js",
+      "tsconfig.json",
+      "jsconfig.json",
+      "package.json",
+      "snowpack.config.json"
+    ],
+    "mount": {
+      "./demo": "/"
+    }
   }
 }
