--- a/jspit/package.json
+++ b/jspit/package.json
@@ -6,13 +6,11 @@
   "license": "BSD-3-Clause",
   "main": "index.html",
   "type": "module",
-
   "repository": {
     "type": "git",
     "url": "https://github.com/borkshop/js.git",
     "directory": "jspit"
   },
-
   "private": true,
   "scripts": {
     "lint": "tsc",
@@ -22,17 +20,16 @@
     "build": "snowpack build --clean"
   },
   "dependencies": {},
-
   "devDependencies": {
-    "@snowpack/plugin-optimize": "^0.2.4",
-    "@snowpack/plugin-typescript": "^1.0.1",
-    "@types/resize-observer-browser": "^0.1.4",
-    "@types/snowpack-env": "^2.3.0",
-    "snowpack": "^2.14.0",
-    "typescript": "^4.0.3"
+    "@snowpack/plugin-optimize": "^0.2.13",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/resize-observer-browser": "^0.1.6",
+    "@types/snowpack-env": "^2.3.4",
+    "snowpack": "^3.8.8",
+    "typescript": "^4.5.2"
   },
-
   "snowpack": {
+    "workspaceRoot": "../",
     "plugins": [
       "@snowpack/plugin-typescript"
     ],
@@ -52,8 +49,8 @@
       ".": "/"
     },
     "alias": {
-      "cdom": "/cdom",
-      "cdom-template": "/cdom-template"
+      "cdom": "../cdom",
+      "cdom-template": "../cdom-template"
     }
   }
 }
