[jspit] publish the rough boopworld demo

--- a/jspit/package.json
+++ b/jspit/package.json
@@ -46,6 +46,7 @@
     "mount": {
       "../cdom": "/cdom",
       "../cdom-template": "/cdom-template",
+      "../boopworld/demo": "/boops",
       ".": "/"
     },
     "alias": {
