--- a/cdom/package.json
+++ b/cdom/package.json
@@ -18,6 +18,7 @@
     "prodts": "rm -fv *.d.ts && tsc --project tsconfig.production.json"
   },
   "dependencies": {
+    "domkit": "0.1.0"
   },
   "devDependencies": {
     "typescript": "^4.0.3"
