--- a/cube/package.json
+++ b/cube/package.json
@@ -6,33 +6,30 @@
   "license": "BSD-3-Clause",
   "main": "index.html",
   "type": "module",
-
   "repository": {
     "type": "git",
     "url": "https://github.com/borkshop/js.git",
     "directory": "cube"
   },
-
   "private": true,
   "scripts": {
     "lint": "tsc",
-    "test": "true",
-    "ci": "npm run lint && npm run test",
+    "ci": "npm run lint",
     "start": "snowpack dev",
     "build": "snowpack build --clean"
   },
-  "dependencies": {},
-
-  "devDependencies": {
-    "@snowpack/plugin-optimize": "^0.2.4",
-    "@snowpack/plugin-typescript": "^1.0.1",
-    "@types/resize-observer-browser": "^0.1.4",
-    "@types/snowpack-env": "^2.3.0",
-    "snowpack": "^2.14.0",
-    "typescript": "^4.0.3"
+  "dependencies": {
+    "cdom": "0.1.0"
   },
-
+  "devDependencies": {
+    "@snowpack/plugin-optimize": "^0.2.13",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/snowpack-env": "^2.3.4",
+    "snowpack": "^3.8.8",
+    "typescript": "^4.5.2"
+  },
   "snowpack": {
+    "workspaceRoot": "../",
     "plugins": [
       "@snowpack/plugin-typescript"
     ],
@@ -47,11 +44,7 @@
       "snowpack.config.json"
     ],
     "mount": {
-      "../cdom": "/cdom",
       ".": "/"
-    },
-    "alias": {
-      "cdom": "/cdom"
     }
   }
 }
