--- a/cdom/package.json
+++ b/cdom/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "scripts": {
+    "test": "true",
     "lint": "tsc",
     "ci": "npm run lint",
     "prodts": "rm -fv *.d.ts && tsc --project tsconfig.production.json"
