--- a/cube/package.json
+++ b/cube/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "scripts": {
+    "test": "true",
     "lint": "tsc",
     "ci": "npm run lint",
     "start": "snowpack dev",
