--- a/boopworld/package.json
+++ b/boopworld/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "morty-mc-fov": "0.9.0",
-    "xorbig": "0.9.0"
+    "xorbig": "0.9.0",
+    "zop": "0.5.0"
   },
   "devDependencies": {
     "ava": "^4.0.0-rc.1",
