--- a/cube/package.json
+++ b/cube/package.json
@@ -25,6 +25,7 @@
     "@snowpack/plugin-optimize": "^0.2.13",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/snowpack-env": "^2.3.4",
+    "@types/wicg-native-file-system": "^2020.6.0",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
   },
