--- a/cube/package.json
+++ b/cube/package.json
@@ -23,6 +23,7 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/snowpack-env": "^2.3.4",
     "@types/wicg-native-file-system": "^2020.6.0",
+    "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
   },
@@ -44,5 +45,10 @@
     "mount": {
       ".": "/"
     }
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
