--- a/cube/package.json
+++ b/cube/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "scripts": {
     "lint": "tsc",
+    "test": "ava",
     "ci": "npm run lint",
     "start": "snowpack dev",
     "build": "snowpack build --clean"
