--- a/cube/tsconfig.json
+++ b/cube/tsconfig.json
@@ -8,7 +8,7 @@
 
     "esModuleInterop": true,
 
-    "moduleResolution": "classic",
+    "moduleResolution": "node",
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
