--- a/cube/package.json
+++ b/cube/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "scripts": {
     "lint": "tsc",
-    "test": "ava",
+    "test": "ava 'test/test-*.js'",
     "ci": "npm run lint",
     "start": "snowpack dev",
     "build": "snowpack build --clean"
@@ -24,6 +24,7 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/snowpack-env": "^2.3.4",
     "@types/wicg-native-file-system": "^2020.6.0",
+    "ava": "^4.2.0",
     "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
@@ -47,6 +48,12 @@
     "mount": {
       ".": "/"
     }
+  },
+  "ava": {
+    "files": [
+      "test/**/test-*.js"
+    ],
+    "timeout": "2m"
   },
   "prettier": {
     "arrowParens": "avoid",
