--- a/cube/tsconfig.json
+++ b/cube/tsconfig.json
@@ -23,5 +23,9 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+
+  "exclude": [
+    "build/**/*"
+  ]
 }
