--- a/cube/package.json
+++ b/cube/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "lint": "tsc",
     "test": "ava",
+    "cover": "c8 ava",
     "ci": "npm run lint",
     "start": "snowpack dev",
     "build": "snowpack build --clean"
@@ -25,6 +26,7 @@
     "@types/snowpack-env": "^2.3.4",
     "@types/wicg-native-file-system": "^2020.6.0",
     "ava": "^4.2.0",
+    "c8": "^7.7.3",
     "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
