--- a/cube/package.json
+++ b/cube/package.json
@@ -23,10 +23,12 @@
   "devDependencies": {
     "@snowpack/plugin-optimize": "^0.2.13",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/offscreencanvas": "^2019.7.0",
     "@types/snowpack-env": "^2.3.4",
     "@types/wicg-native-file-system": "^2020.6.0",
     "ava": "^4.2.0",
     "c8": "^7.7.3",
+    "gl-matrix": "^3.4.3",
     "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
