[cube] finish moving scene generator for real

--- a/cube/package.json
+++ b/cube/package.json
@@ -38,6 +38,7 @@
     ],
     "exclude": [
       "**/build/**/*",
+      "**/test/**/*",
       "**/node_modules/**/*",
       "**/test-*.js",
       "**/*.test.js",
