[cube] do not lint scratch space

--- a/cube/tsconfig.json
+++ b/cube/tsconfig.json
@@ -25,5 +25,5 @@
     "noFallthroughCasesInSwitch": true
   },
 
-  "exclude": ["build", "coverage"]
+  "exclude": ["build", "coverage", "scratch"]
 }
