[cube] move mechanics into world save file

--- a/cube/package.json
+++ b/cube/package.json
@@ -40,6 +40,7 @@
       "**/build/**/*",
       "**/test/**/*",
       "**/scratch/**/*",
+      "**/scripts/**/*",
       "**/node_modules/**/*",
       "**/test-*.js",
       "**/*.test.js",
