[cube] game storage slots

--- a/cube/tsconfig.json
+++ b/cube/tsconfig.json
@@ -22,6 +22,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true
   },
 
