--- a/cube/tsconfig.json
+++ b/cube/tsconfig.json
@@ -1,30 +1,28 @@
 {
   "compilerOptions": {
     "module": "es2022",
-    "target": "es2020",
-
+    "target": "esnext",
     "allowJs": true,
     "checkJs": true,
-
     "esModuleInterop": true,
-
     "moduleResolution": "node",
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
     "noEmit": true,
-
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
-
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true
   },
-
-  "exclude": ["build", "coverage", "scratch"]
+  "exclude": [
+    "build",
+    "coverage",
+    "scratch"
+  ]
 }
